hw-enviornments/terraform/security-g.tf
resource "aws_security_group" "hw_demo-public-web-sg" {
  vpc_id      = module.vpc.vpc_id
  name        = "hw_demo-public-web-sg"
  description = "allow http and https"

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
